<resources>
    <string name="app_name">Buscando un Hogar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for labels, textView and more.   -->
    <string name="descriptionApp">Grupo Nutresa S. A. es la empresa líder en alimentos procesados en Colombia y uno de los jugadores más relevantes del sector en América Latina.
        Fundada en 1920, cuenta en la actualidad con cerca de 46.000 colaboradores y opera a través de ocho unidades de negocio: Cárnicos, Galletas, Chocolates, Tresmontes Lucchetti -TMLUC-,
        Cafés, Alimentos al Consumidor, Helados y Pastas.</string>

    <string name="allRightsReserved">© 2020 Buscando un Hogar™. Todos los derechos reservados.</string>

    <string name="facebook_app_id">387788009022778</string>
    <string name="fb_login_protocol_scheme">fb387788009022778</string>

    <array name="typesAnimals">
        <item>@string/perro</item>
        <item>@string/gato</item>
    </array>

    <!-- Errores -->
    <string name="errorNombre">Por favor, coloque un Nombre valido</string>
    <string name="errorApellidos">Por favor, coloque un Apellido valido</string>
    <string name="errorMunicipio">Por favor, coloque un Municipio valido</string>
    <string name="errorDepartamento">Por favor, coloque un Departamento valido</string>
    <string name="errorEmail">Por favor, coloque un Email valido</string>
    <string name="errorTelefono">Por favor, coloque un Telefono valido</string>
    <string name="errorContraseña">Por favor, coloque una Contraseña valida</string>
    <string name="errorDireccion">Por favor, coloque una Direccion valida</string>
    <string name="errorContraseñasNoCoinciden">Las contraseñas no coinciden</string>
    <string name="errorEmailExiste">Esta direccion de correo ya se ha registrado anteriormente.</string>
    <string name="ingresar_email">e-mail</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="boton_atras">Atras</string>
    <string name="error_pass_weak">La contraseña debe ser mayor a 6 letras o digitos.</string>

    <string name="errorNombreMascota">Por favor, coloque un Nombre valido</string>
    <string name="errorTipoMascota">Por favor, seleccione un Tipo de mascota</string>
    <string name="errorRaza">Por favor, la Raza de su mascota</string>
    <string name="errorEdad">Por favor, digite la Edad de su mascota</string>
    <string name="errorDescripcionMascota">Por favor, coloque una descripcion valida</string>

    <string name="colocar_email">Por favor, coloque su email</string>
    <string name="colocar_contraseña">Por favor, coloque su contraseña</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="e_mail">E-mail</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="departamento">Departamento</string>
    <string name="municipio">Municipio</string>
    <string name="direccion">Direccion</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="nombre_de_la_mascota">Nombre de la mascota</string>
    <string name="tipo_de_mascota">Tipo de Mascota</string>
    <string name="raza">Raza</string>
    <string name="registrar_mascota">Registrar Mascota</string>
    <string name="perro">Perro</string>
    <string name="gato">Gato</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="no_tienes_mascotas_registradas_aun">No tienes mascotas registradas aún.</string>
    <string name="no_tienes_solicitudes_de_adopcion_aun">No tienes solicitudes de adopción aún.</string>
    <string name="mensaje_solicitud"> %1$s a realizado una solicitud de adopción por %2$s. Consulta los datos, presionando en el boton aceptar.</string>
    <string name="negar_solicitud">Negar Solicitud</string>
    <string name="aceptar_solicitud">Aceptar Solicitud</string>
    <string name="boton_ir_atras">Atrás</string>
    <string name="boton_ir_adopcion">Solicitar Adopción</string>
    <string name="mensaje_advertencia_solicitud">Al momento de presionar el botón "Solicitar Adopcion", se le enviará una solicitud a la persona que registro la mascota en la aplicación, el podrá revisar esa solicitud y se podrá poner en contacto contigo. Gracias por adoptar un animalito que lo necesita!</string>
    <string name="hola_soy">Hola, soy %1$s!</string>
    <string name="raza_formulario">Raza: %1$s</string>
    <string name="edad_formulario">Edad: %1$s año(s)</string>
    <string name="notificacion_mensaje">Te han enviado una solicitud de adopcion por una mascota que has publicado. Revisala aqui!</string>
    <string name="nombre_canal">notificaciones_buh</string>
    <string name="channel_description">Canal de notificaciones para la aplicacion Buscando un Hogar</string>
    <string name="error_imagen_formulario">Obligatoriamente debes añadir una imagen de la mascota</string>
    <string name="error_imagen_formulario_usuario">Obligatoriamente debes añadir una imagen</string>
    <string name="mascota_propia">Para editar o eliminar una mascota que hayas registrado,
        ve a la pestaña "Mis mascotas" de la pantalla principal.
    </string>
    <string name="confirmar_eliminar">¿Desea eliminar el registro?</string>
    <string name="cancelar">Cancelar</string>

    <string name="editar_info">Editar Información %1$s</string>
    <string name="modificar_info">Modificar</string>
    <string name="mensaje_edicion_mascota">Se ha editado la informacion de la mascota correctamente</string>
    <string name="mensaje_error_telefono">El número de telefono debe ser de 10 digitos</string>
    <string name="editar_info_mascota">Editar Información de la Mascota</string>
    <string name="cargando_mascotas">Cargando mascotas...</string>


    <string-array name="departamentos">
        <item>Amazonas</item>
        <item>Antioquia</item>
        <item>Arauca</item>
        <item>Atlántico</item>
        <item>Bogotá</item>
        <item>Bolívar</item>
        <item>Boyacá</item>
        <item>Caldas</item>
        <item>Caquetá</item>
        <item>Casanare</item>
        <item>Cauca</item>
        <item>Cesar</item>
        <item>Chocó</item>
        <item>Córdoba</item>
        <item>Cundinamarca</item>
        <item>Guainía</item>
        <item>Guaviare</item>
        <item>Huila</item>
        <item>La Guajira</item>
        <item>Magdalena</item>
        <item>Meta</item>
        <item>Nariño</item>
        <item>Norte de Santander</item>
        <item>Putumayo</item>
        <item>Quindío</item>
        <item>Risaralda</item>
        <item>San Andrés y Providencia</item>
        <item>Santander</item>
        <item>Sucre</item>
        <item>Tolima</item>
        <item>Valle del Cauca</item>
        <item>Vaupés</item>
        <item>Vichada</item>
    </string-array>

</resources>