<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activity.EditarInformacionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--  Titulo del Formulario   -->
        <TextView
            android:id="@+id/tvTituloEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blackTextColor"
            android:text="@string/editar_info_mascota"
            android:fontFamily="@font/simplicity"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Informacion De la Mascota  -->

        <LinearLayout
            android:id="@+id/layoutInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloEditar">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/nombre_de_la_mascota"
                android:textColorHint="@color/colorPrimary"
                app:startIconDrawable="@drawable/profile">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/etTipoMascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tipo_de_mascota"
                app:errorEnabled="true"
                android:textColorHint="@color/colorPrimary"
                app:startIconDrawable="@drawable/signo">

                <AutoCompleteTextView
                    android:id="@+id/dropdownTipoMascota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etRaza"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/raza"
                android:textColorHint="@color/colorPrimary"
                app:startIconDrawable="@drawable/pata_register">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEdad"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="Edad"
                android:textColorHint="@color/colorPrimary"
                app:counterMaxLength="2"
                app:startIconDrawable="@drawable/add">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etDescripcion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="Descripción"
                android:textColorHint="@color/colorPrimary"
                app:startIconDrawable="@drawable/corazon_favorite">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/ivFoto"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/blank_image_template" />

            <TextView
                android:id="@+id/tvErrorImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/design_default_color_error"
                android:text="@string/error_imagen_formulario"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/ibCamara"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:onClick="tomarFoto"
                    android:src="@mipmap/ic_camara_nueva" />

                <ImageButton
                    android:id="@+id/ibCarrete"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:onClick="buscarGaleria"
                    android:src="@mipmap/ic_carrete_nuevo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearBotones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAtras"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:onClick="cancelarEditar"
                android:text="@string/boton_ir_atras" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight=".1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegistrarMascota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:onClick="modificarMascota"
                android:text="@string/editar" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>