<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSolicitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:strokeWidth="1dp"
        app:strokeColor="@color/stroke_color"
        app:cardElevation="3dp"
        app:cardCornerRadius="5dp"
        android:layout_margin="8dp"
        style="@style/Widget.MaterialComponents.CardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Profile quien subió el animal -->

            <RelativeLayout style="@style/styleRelativeLayout">

                <ImageView
                    android:id="@+id/ivProfileAddMascota"
                    android:src="@drawable/profile"
                    android:layout_marginLeft="5dp"
                    style="@style/styleImageProfile"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toRightOf="@+id/ivProfileAddMascota">

                    <TextView
                        android:id="@+id/tvMensajeSolicitud"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/mensaje_solicitud"
                        style="@style/styleMainText"/>

                    <TextView
                        android:id="@+id/tvLocacionDueño"
                        android:textColor="@color/colorBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="false"
                        android:text="Barranquilla, Atlántico"
                        style="@style/styleDescText"/>
                </LinearLayout>

            </RelativeLayout>

            <!-- Separador -->
            <View android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <!-- Botones de accion -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNegarSolicitud"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/negar_solicitud"
                    style="?attr/materialButtonStyle"
                    android:backgroundTint="@color/design_default_color_error"/>

                <Button
                    android:id="@+id/btnAceptarSolicitud"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/aceptar_solicitud"
                    style="?attr/materialButtonStyle"
                    />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>