<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.AdoptameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvMascotaDetalle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:elevation="5dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintPrincipal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary">

                    <ImageView
                        android:id="@+id/ivMascotaDetalle"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_marginTop="16dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/perro_modelo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvNombreMascotaDetalle"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/whiteTextColor"
                        android:text="@string/hola_soy"
                        android:textSize="30sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ivMascotaDetalle"/>

                    <View
                        style="@style/proifleDetailsView"
                        android:layout_width="0dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:background="@color/colorSecondary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvNombreMascotaDetalle" />

                    <TextView
                        android:id="@+id/tvDescripcionMascotaDetalle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:textColor="@color/whiteTextColor"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="Descripcion de la mascota"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/tvRazaMascotaDetalle"
                        app:layout_constraintTop_toBottomOf="@+id/tvNombreMascotaDetalle"/>

                    <TextView
                        android:id="@+id/tvRazaMascotaDetalle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="@color/whiteTextColor"
                        android:textSize="20sp"
                        android:text="Criollo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDescripcionMascotaDetalle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/tvEdadMascotaDetalle"/>

                    <TextView
                        android:id="@+id/tvEdadMascotaDetalle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:textColor="@color/whiteTextColor"
                        android:text="3 años"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvRazaMascotaDetalle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/linearBotonesAccion"/>

                    <LinearLayout
                        android:id="@+id/linearBotonesAccion"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorSecondary"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvEdadMascotaDetalle">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnAtrasDetalle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:layout_margin="10dp"
                            android:textStyle="bold"
                            android:onClick="irAtras"
                            android:backgroundTint="@color/design_default_color_error"
                            android:text="@string/boton_ir_atras"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight=".1" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnSolicitarAdopcion"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:onClick="solicitarAdopcion"
                            android:textStyle="bold"
                            android:text="@string/boton_ir_adopcion"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvMensajeAdvertencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearBotonesAccion"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:textColor="@color/whiteTextColor"
                        android:text="@string/mensaje_advertencia_solicitud"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>